cuadrarfotos_passwords_elegirtypeform

--- a/css/style.css
+++ b/css/style.css
@@ -9761,8 +9761,8 @@ a.text-dark:hover, a.text-dark:focus {
 }
 
 /*
-Cambiar el azul: #787d56
-Cambiar el dorado: #cfa662
+Principal: #787d56
+Secundario: #cfa662
 */
 
 /*
