--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,6 +1,6 @@
 /******* Bootstrap Theming ********/
 
-$primary: #E47A2E;
+$primary: #787d56;
 $secondary: #EDF5F7;
 $light: #FFFFFF;
 $dark: #121F38;
